--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -95,8 +95,8 @@ head
       
       .cbp-spmenu a {
         display: block;
-        color: #999;
-        font-size: 1.1em;
+        color: #ddd;
+        font-size: 20px;
         font-weight: 300;
       }
       
