--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -148,6 +148,7 @@ head
       }
       .container {
         transition: 0.5s -webkit-filter linear;
+        transition: background-color 0.5s linear;
       }
       .navbar-right {
         float: none !important; 
@@ -209,7 +210,7 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="/logout") Выйти
-    .container(style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:20px;padding-right:0px;padding-bottom:74px;')
+    .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:20px;padding-right:0px;padding-bottom:74px;')
       .row
         .col-xs-12(style='text-align:center;')
           h1(style='font-family:high;font-size:100px;font-weight:bold;color:white;') 30 
@@ -333,6 +334,9 @@ head
           $('#shownav').fadeOut();
           $('#nav').fadeIn();
           });
+      $('#showmovies').click(function(){
+         $('#maincont').css('background-color','#CA5B52');
+        });
         $('#login').click(authsubmit);
       var counter =0;
         var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
