--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -339,6 +339,11 @@ head
          $('.activebutton').removeClass('activebutton');
          $('#showmovies').addClass('activebutton');
         });
+      $('#showbooks').click(function(){
+         $('#maincont').css('background-color','#52CA8F');
+         $('.activebutton').removeClass('activebutton');
+         $('#showbooks').addClass('activebutton');
+        });
         $('#login').click(authsubmit);
       var counter =0;
         var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
