--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -299,6 +299,28 @@ head
                   a(style='background-color:#EFAF4F;') Add
                 li(class="next")
                   a( class='addbookbutton' style='background-color:#999;') Close
+        .row.adding(id='addmovie' style='display:none;padding-top:20px;background-color:#99362F;')
+          .col-xs-12
+            .form-group
+              label(for="exampleInputEmail1" style='color:white;font-size:15px;') Название
+              input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Crime and punishment")
+            .form-group
+              label(for="exampleInputEmail1" style='color:white;font-size:15px;') Автор
+              input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Dostoevsky F.M.")
+            .checkbox
+              label
+                input(type="checkbox") 
+                span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
+            .checkbox
+              label
+                input(type="checkbox") 
+                span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
+            nav
+              ul(class="pager")
+                li(class="previous")
+                  a(style='background-color:#EFAF4F;') Add
+                li(class="next")
+                  a( class='addbookbutton' style='background-color:#999;') Close
         .row(style='text-align:center;')
           .col-xs-3.addbookbutton
             h1( style='color:white;font-size:40px;padding-top:10px;padding-bottom:10px;margin-top:0px;margin-bottom:0px;') +
@@ -323,9 +345,12 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
-      // CA5B52 for movies
+      // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
-          $('#addbook').slideToggle();
+          if($('#showbooks').hasClass('activebutton'))
+          {$('#addbook').slideToggle();}
+          else
+            {$('#addmovie').slideToggle();}
           });
         $('.addmoviebutton').click(function(){
           $('#addmovie').slideToggle();
