--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -277,7 +277,7 @@ head
             span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')     
     footer(class='footer')
       .container
-        .row.adding(id='addbook' style='display:none;padding-top:20px;')
+        .row.adding(id='addbook' style='display:none;padding-top:20px;background-color:#378961;')
           .col-xs-12
             .form-group
               label(for="exampleInputEmail1" style='color:white;') Название
