--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -220,10 +220,10 @@ head
       //        .row
       //          .col-xs-12
       //            h4(class='alreadyb') #{books.booktitle}
-      .row
-        .col-xs-12
-          h4 #{doc}
-          h3 #{uid}
+      //.row
+      //  .col-xs-12
+      //    h4 #{doc}
+      //    h3 #{uid}
     footer(class='footer')
       .container
         .row.adding(id='addbook' style='display:none;padding-top:20px;background-color:#378961;')
