--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -215,10 +215,11 @@ head
         .col-xs-12(style='text-align:center;')
           h1(style='font-family:high;font-size:100px;font-weight:bold;color:white;') 30 
             span(style='color:rgba(0, 0, 0, 0.15);') | 20
-      .row
+      .row(style='text-align:center;')
         .col-xs-12
           h2 Welcome !
           h3 Add a book by touching + at the bottom of the screen
+          h2 (-:
     footer(class='footer')
       .container
         .row(id='addbook' style='display:none;padding-top:20px;background-color:#378961;')
