--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -215,7 +215,7 @@ head
         .col-xs-12(style='text-align:center;')
           h1(style='font-family:high;font-size:100px;font-weight:bold;color:white;') 0 
             span(style='color:rgba(0, 0, 0, 0.15);') | 0
-      .row(style='text-align:center;')
+      .row(style='text-align:center;padding-right:20px;')
         .col-xs-12
           h2 Welcome !
           h3 Add a book by touching + at the bottom of the screen
