--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -213,7 +213,7 @@ head
     .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:20px;padding-right:0px;padding-bottom:74px;')
       .row
         .col-xs-12(style='text-align:center;')
-          h1(style='font-family:high;font-size:100px;font-weight:bold;color:white;') 0 
+          h1(style='font-family:high;font-size:100px;font-weight:bold;color:white;padding-right:20px;') 0 
             span(style='color:rgba(0, 0, 0, 0.15);') | 0
       .row(style='text-align:center;padding-right:20px;')
         .col-xs-12
