--- a/views/admin.jade
+++ b/views/admin.jade
@@ -63,7 +63,7 @@ head
         .col-xs-6
           .list-group
             a(href="#",class="list-group-item active") Главная панель 
-            a(href="http://recentones.com/admin/1",class="list-group-item") Список пользователей
+            a(href="http://peopleandbooks.com/admin/1",class="list-group-item") Список пользователей
               span(class="badge") #{users}
         .col-xs-6(style='max-height:340px;overflow:auto;')
           ul(class='list-group', id='insertmessages')
