--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -66,6 +66,19 @@ head
       .btn {
         border-radius:30px;
       }
+      textarea:hover, 
+      input:hover, 
+      textarea:active, 
+      input:active, 
+      textarea:focus, 
+      input:focus,
+      button:focus,
+      button:active,
+      button:hover
+      {
+          outline:0px !important;
+          -webkit-appearance:none;
+      }
   body
     nav(class="navbar navbar-inverse navbar-static-top",style='margin-bottom:0px;')
           .container
@@ -86,11 +99,11 @@ head
         .col-xs-12
           form(method='post' action='/drop/users' role='form' )
             .row
-              .col-xs-12
-                input(type='text',style='margin:1vh;',name='p')
+              .col-xs-4
+                input(type='text' class='form-control' style='margin:5px;' name='p')
             .row
               .col-xs-12
-                button( class='btn btn-danger' style='border-radius:30px;',type='submit') Drop 
+                button( class='btn btn-danger' type='submit') Drop 
       .row
         .col-xs-12
           .panel.panel-default
