--- a/views/adminzeromsg.jade
+++ b/views/adminzeromsg.jade
@@ -53,7 +53,7 @@ head
     nav(class="navbar navbar-inverse navbar-static-top",style='margin-bottom:0px;')
           .container
             .navbar-header
-              a(class="navbar-brand" href="#") People & Books
+              a(class="navbar-brand" href="/") People & Books
             .collapse.navbar-collapse#navbar-collapse-9
               ul(class='nav navbar-nav')
                 li(class='active')
