--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -83,7 +83,7 @@ head
     nav(class="navbar navbar-inverse navbar-static-top",style='margin-bottom:0px;')
           .container
             .navbar-header
-              a(class="navbar-brand" href="#") People & Books
+              a(class="navbar-brand" href="/") People & Books
             .collapse.navbar-collapse#navbar-collapse-9
               ul(class='nav navbar-nav')
                 li(class='active')
@@ -99,7 +99,7 @@ head
         .col-xs-12
           form(method='post' action='/drop/users' role='form' )
             .row
-              .col-xs-4
+              .col-xs-4.col-xs-offset-4
                 input(type='text' class='form-control' style='margin:5px;' name='p')
             .row
               .col-xs-12
