--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -210,6 +210,10 @@ head
           -webkit-appearance:none;
       }
   body
+    script.
+      if(screen.width < 414){
+      window.location='http://m.peopleandbooks.com/';
+      }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
@@ -254,11 +258,13 @@ head
                     a(style='background-color:#EFAF4F;') Add
                   li(class="next")
                     a( class='addbookbutton' style='background-color:#999;') Close
-          .row.leftPaddingExtended
-            .col-xs-3
-              h4(class='datecl') 12.05.2015
-            .col-xs-9
-              h4(class='alreadyb') Ф.М. Достоевский "Идиот"
+          each date,i in doc
+            each book,q in date
+             .row.leftPaddingExtended
+               .col-xs-3
+                 h4(class='datecl') 12.05.2015
+               .col-xs-9
+                 h4(class='alreadyb') Ф.М. Достоевский "Идиот"
           .row.leftPaddingExtended
             .col-xs-9.col-xs-offset-3
               h4(class='alreadyb') Д. Перетолчин "Мировые войны и мировые элиты"
