--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -209,6 +209,18 @@ head
           outline:0px !important;
           -webkit-appearance:none;
       }
+      #welcome{
+        left:84px;
+        width:100%;
+        height:100%;
+        position:fixed;
+        filter:blur(4px);
+        -webkit-filter:blur(4px);
+        -o-filter:blur(4px);
+        -moz-filter:blur(4px);
+        text-align:center;
+        padding-top:20%;
+      }
   body
     script.
       if(screen.width < 414){
@@ -229,7 +241,7 @@ head
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
-      #welcome(style='left:84px;width:100%;height:100%;position:fixed;filter:blur(4px);text-align:center;padding-top:20%;')
+      #welcome
         h2 Welcome !
         h3 Add a book or a movie
       #heightcheck.row
