--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -245,8 +245,8 @@ head
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
       #welcome
-        h2 Welcome !
-        h3 Add a book or a movie
+        h2(style='color:white;') Welcome !
+        h3(style='color:white;') Add a book or a movie
         button(class='btn' style='border-radius:30px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);') Enter
       #heightcheck.row
         .col-xs-6(id='books' style='background-color:rgba(108, 166, 149, 1);height:100%;overflow:auto;')
