--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -317,7 +317,7 @@ head
       script.
         $('#welcomebutton').click({
           $('#welcome').fadeOut();
-          $('.container').css({'-webkit-filter':'blur(0px) brightness(1)','-o-filter':'blur(0px) brightness(1)','-moz-filter':'blur(0px) brightness(1)','filter':'blur(0px) brightness(1)'})
+          $('.container').css({'-webkit-filter':'blur(0px) brightness(1)','-o-filter':'blur(0px) brightness(1)','-moz-filter':'blur(0px) brightness(1)','filter':'blur(0px) brightness(1)'});
           });
         $('.addbookbutton').click(function(){
           $('#addbook').slideToggle();
