--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -248,7 +248,7 @@ head
       #welcome
           h2(style='color:white;') Welcome !
           h3(style='color:white;') Add a book or a movie
-          button(class='btn' style='border-radius:30px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);') Enter
+          button(class='btn' id='welcomebutton' style='border-radius:30px;border:0px;color:white;background-color:rgba(255, 255, 255, 0.38);') Enter
       .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
         #heightcheck.row
           .col-xs-6(id='books' style='background-color:rgba(108, 166, 149, 1);height:100%;overflow:auto;')
