--- a/views/emptyindexreg.jade
+++ b/views/emptyindexreg.jade
@@ -127,6 +127,8 @@ head
         box-shadow: inset 0px 0px 10px 1px #181818;
         background-color:#333;
         color:#999;
+        padding-left: 20px;
+        padding-right: 20px;
       }
       .adding input {
         background-color:#333;
